v0.0.1/modules/schema/pages/class/Reservoir.adoc
= `Reservoir`
:toclevels: 4


+++A water storage facility within a hydro system, including: ponds, lakes, lagoons, and rivers. The storage is usually behind some type of dam.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Reservoir`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** *`Reservoir`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Reservoir {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}

















Reservoir {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Reservoir {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



LevelVsVolumeCurve {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InflowForecast {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



HydroPowerPlant {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



HydroPowerPlant {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TargetLevelSchedule {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Control {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PSRType {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ReportingGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OperatingShare {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AssetInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



VerificationAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ClearanceDocument {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



GenericAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PSREvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OperationalTag {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}











Reservoir -> Reservoir: SpillsIntoReservoirs


Reservoir -> Reservoir: SpillsFromReservoir


Reservoir -> LevelVsVolumeCurve: LevelVsVolumeCurves


Reservoir -> InflowForecast: InflowForecasts


Reservoir -> HydroPowerPlant: HydroPowerPlants


Reservoir -> HydroPowerPlant: UpstreamFromHydroPowerPlants


Reservoir -> TargetLevelSchedule: TargetLevelSchedule


Reservoir -> Control: Controls


Reservoir -> Measurement: Measurements


Reservoir -> PSRType: PSRType


Reservoir -> ConfigurationEvent: ConfigurationEvent


Reservoir -> ReportingGroup: ReportingGroup


Reservoir -> OperatingShare: OperatingShare


Reservoir -> AssetInfo: AssetDatasheet


Reservoir -> VerificationAction: VerificationAction


Reservoir -> ClearanceDocument: Clearances


Reservoir -> GenericAction: GenericAction


Reservoir -> PSREvent: PSREvents


Reservoir -> Asset: Assets


Reservoir -> Location: Location


Reservoir -> OperationalTag: OperationalTags


Reservoir -> DiagramObject: DiagramObjects


Reservoir -> InstanceSet: InstanceSet


Reservoir -> Name: Names


Reservoir -> ChangeSetMember: PropertiesCIMDataObject


Reservoir -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<SpillsFromReservoir,`SpillsFromReservoir`>>
| 0..1
| xref::class/Reservoir.adoc[`Reservoir`]
| +++A reservoir may spill into a downstream reservoir.+++

| <<TargetLevelSchedule,`TargetLevelSchedule`>>
| 0..1
| xref::class/TargetLevelSchedule.adoc[`TargetLevelSchedule`]
| +++A reservoir may have a water level target schedule.+++

| <<activeStorageCapacity,`activeStorageCapacity`>>
| 0..1
| xref::class/Volume.adoc[`Volume`]
| +++Storage volume between the full supply level and the normal minimum operating level.+++

| <<energyStorageRating,`energyStorageRating`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The reservoir's energy storage rating in energy for given head conditions.+++

| <<fullSupplyLevel,`fullSupplyLevel`>>
| 0..1
| xref::class/WaterLevel.adoc[`WaterLevel`]
| +++Full supply level, above which water will spill. This can be the spillway crest level or the top of closed gates.+++

| <<grossCapacity,`grossCapacity`>>
| 0..1
| xref::class/Volume.adoc[`Volume`]
| +++Total capacity of reservoir.+++

| <<normalMinOperateLevel,`normalMinOperateLevel`>>
| 0..1
| xref::class/WaterLevel.adoc[`WaterLevel`]
| +++Normal minimum operating level below which the penstocks will draw air.+++

| <<riverOutletWorks,`riverOutletWorks`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++River outlet works for riparian right releases or other purposes.+++

| <<spillTravelDelay,`spillTravelDelay`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++The spillway water travel delay to the next downstream reservoir.+++

| <<spillWayGateType,`spillWayGateType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Type of spillway gate, including parameters.+++

| <<spillwayCapacity,`spillwayCapacity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++The flow capacity of the spillway in cubic meters per second.+++

| <<spillwayCrestLength,`spillwayCrestLength`>>
| 0..1
| xref::class/Length.adoc[`Length`]
| +++The length of the spillway crest.+++

| <<spillwayCrestLevel,`spillwayCrestLevel`>>
| 0..1
| xref::class/WaterLevel.adoc[`WaterLevel`]
| +++Spillway crest level above which water will spill.+++

| <<HydroPowerPlants,`HydroPowerPlants`>>
| 0..*
| xref::class/HydroPowerPlant.adoc[`HydroPowerPlant`]
| +++Generators discharge water to or pumps are supplied water from a downstream reservoir.+++

| <<InflowForecasts,`InflowForecasts`>>
| 0..*
| xref::class/InflowForecast.adoc[`InflowForecast`]
| +++A reservoir may have a "natural" inflow forecast.+++

| <<LevelVsVolumeCurves,`LevelVsVolumeCurves`>>
| 0..*
| xref::class/LevelVsVolumeCurve.adoc[`LevelVsVolumeCurve`]
| +++A reservoir may have a level versus volume relationship.+++

| <<SpillsIntoReservoirs,`SpillsIntoReservoirs`>>
| 0..*
| xref::class/Reservoir.adoc[`Reservoir`]
| +++A reservoir may spill into a downstream reservoir.+++

| <<UpstreamFromHydroPowerPlants,`UpstreamFromHydroPowerPlants`>>
| 0..*
| xref::class/HydroPowerPlant.adoc[`HydroPowerPlant`]
| +++Generators are supplied water from or pumps discharge water to an upstream reservoir.+++

| <<AssetDatasheet,`AssetDatasheet`>>
| 0..1
| xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++

| <<Location,`Location`>>
| 0..1
| xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++

| <<PSRType,`PSRType`>>
| 0..1
| xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

| <<Clearances,`Clearances`>>
| 0..*
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++

| <<ConfigurationEvent,`ConfigurationEvent`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++

| <<Controls,`Controls`>>
| 0..*
| xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<GenericAction,`GenericAction`>>
| 0..*
| xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++

| <<Measurements,`Measurements`>>
| 0..*
| xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OperatingShare,`OperatingShare`>>
| 0..*
| xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++

| <<OperationalTags,`OperationalTags`>>
| 0..*
| xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++

| <<PSREvents,`PSREvents`>>
| 0..*
| xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++

| <<ReportingGroup,`ReportingGroup`>>
| 0..*
| xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<VerificationAction,`VerificationAction`>>
| 0..*
| xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++
|===

'''


//[discrete]
[#activeStorageCapacity]
=== `activeStorageCapacity`
+++Storage volume between the full supply level and the normal minimum operating level.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.activeStorageCapacity`
| Cardinality
| 0..1
| Type
| xref::class/Volume.adoc[`Volume`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#energyStorageRating]
=== `energyStorageRating`
+++The reservoir's energy storage rating in energy for given head conditions.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.energyStorageRating`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#fullSupplyLevel]
=== `fullSupplyLevel`
+++Full supply level, above which water will spill. This can be the spillway crest level or the top of closed gates.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.fullSupplyLevel`
| Cardinality
| 0..1
| Type
| xref::class/WaterLevel.adoc[`WaterLevel`]


|===

//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#grossCapacity]
=== `grossCapacity`
+++Total capacity of reservoir.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.grossCapacity`
| Cardinality
| 0..1
| Type
| xref::class/Volume.adoc[`Volume`]


|===

//[discrete]
[#HydroPowerPlants]
=== `HydroPowerPlants`
+++Generators discharge water to or pumps are supplied water from a downstream reservoir.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.HydroPowerPlants`
| Cardinality
| 0..*
| Type
| xref::class/HydroPowerPlant.adoc[`HydroPowerPlant`]


|===

//[discrete]
[#InflowForecasts]
=== `InflowForecasts`
+++A reservoir may have a "natural" inflow forecast.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.InflowForecasts`
| Cardinality
| 0..*
| Type
| xref::class/InflowForecast.adoc[`InflowForecast`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#LevelVsVolumeCurves]
=== `LevelVsVolumeCurves`
+++A reservoir may have a level versus volume relationship.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.LevelVsVolumeCurves`
| Cardinality
| 0..*
| Type
| xref::class/LevelVsVolumeCurve.adoc[`LevelVsVolumeCurve`]


|===

//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#normalMinOperateLevel]
=== `normalMinOperateLevel`
+++Normal minimum operating level below which the penstocks will draw air.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.normalMinOperateLevel`
| Cardinality
| 0..1
| Type
| xref::class/WaterLevel.adoc[`WaterLevel`]


|===

//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#riverOutletWorks]
=== `riverOutletWorks`
+++River outlet works for riparian right releases or other purposes.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.riverOutletWorks`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#SpillsFromReservoir]
=== `SpillsFromReservoir`
+++A reservoir may spill into a downstream reservoir.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.SpillsFromReservoir`
| Cardinality
| 0..1
| Type
| xref::class/Reservoir.adoc[`Reservoir`]


|===

//[discrete]
[#SpillsIntoReservoirs]
=== `SpillsIntoReservoirs`
+++A reservoir may spill into a downstream reservoir.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.SpillsIntoReservoirs`
| Cardinality
| 0..*
| Type
| xref::class/Reservoir.adoc[`Reservoir`]


|===

//[discrete]
[#spillTravelDelay]
=== `spillTravelDelay`
+++The spillway water travel delay to the next downstream reservoir.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.spillTravelDelay`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#spillwayCapacity]
=== `spillwayCapacity`
+++The flow capacity of the spillway in cubic meters per second.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.spillwayCapacity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#spillwayCrestLength]
=== `spillwayCrestLength`
+++The length of the spillway crest.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.spillwayCrestLength`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

//[discrete]
[#spillwayCrestLevel]
=== `spillwayCrestLevel`
+++Spillway crest level above which water will spill.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.spillwayCrestLevel`
| Cardinality
| 0..1
| Type
| xref::class/WaterLevel.adoc[`WaterLevel`]


|===

//[discrete]
[#spillWayGateType]
=== `spillWayGateType`
+++Type of spillway gate, including parameters.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.spillWayGateType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetLevelSchedule]
=== `TargetLevelSchedule`
+++A reservoir may have a water level target schedule.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.TargetLevelSchedule`
| Cardinality
| 0..1
| Type
| xref::class/TargetLevelSchedule.adoc[`TargetLevelSchedule`]


|===

//[discrete]
[#UpstreamFromHydroPowerPlants]
=== `UpstreamFromHydroPowerPlants`
+++Generators are supplied water from or pumps discharge water to an upstream reservoir.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Reservoir.UpstreamFromHydroPowerPlants`
| Cardinality
| 0..*
| Type
| xref::class/HydroPowerPlant.adoc[`HydroPowerPlant`]


|===

//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===


